
ChangeLog
 [ + added, - removed, * changed ]
 + 29May2018 Add $DESTDIR to src/others/Makefile.am to be able to create RPM's
 + 22May2018 Adds instrumentation support for MPI_Fetch_and_op, MPI_Compare_and_swap and MPI_Win_flush* routines (closes #2)
 * 18May2018 Fixed wrong format of tag in the prv trace that resulted in negative comm tags
 * 17May2018 Adds extrae_module.f90 to distribution
 + 15May2018 Added configure check for MPI_Get_accumulate, BullMPI does not implement this routine
 + 11May2018 Added support for ARM64 cross-compilation (GitHub pull #11)
 + 10May2018 Added instrumentation wrapper for ioctl()
 * 06Apr2018 Fixed missing states for MPI_*neighbor* routines
 * 20Mar2018 Added instrumentation support for MPI_*neighbor* routines
 * 19Mar2018 Allows defining a trace-control gops interval starting at 0
 * 15Mar2018 Fixes segfault when EXTRAE_CONFIG_FILE is wrong (GitHub issue #1)
 * 28Feb2018 Fix invalid read in WriteFileBuffer_delete (GitHub pull #9)
 * 28Feb2018 Adds R/W lock in OMPT-helper functions (GitHub pull #6)
 * 13Feb2018 Adds message to warn about merger not able to open the binary to translate addresses
 * 09Feb2018 Changes index calculation when there is no nesting
 * 23Jan2018 Fixes Testsome wrapper calling PMPI_Waitsome instead of PMPI_Testsome (GitHub issue #3)
 * 09Jan2018 Added mutex to protect buffers' double frees from dying pthreads
 * 08Jan2018 Adds Skylake support in PEBS
 * 19Dec2017 Defer the initialization of each IO, DYNAMIC MEMORY and SYSTEM calls to the first time they are used
 * 13Dec2017 Increase maximum events for buffer transactions
 * 29Nov2017 Refactor utils function names
 + 09Nov2017 Extended pyextrae API with calls to nevent and neventandcounters
 * 27Oct2017 No longer set a value for OMP_NUM_THREADS if it was not defined by the user to avoid conflicts with schedulers that assign threads through omp_set_num_threads
 + 26Oct2017 Added header file extrae_version.h