@@ -545,6 +545,7 @@ enum {
 #define CUDAMEMCPYASYNC_EV       63100007
 #define CUDADEVICERESET_EV       63100008
 #define CUDATHREADEXIT_EV        63100009
+#define CUDASTREAMDESTROY_EV     63100010
 #define CUDABASE_GPU_EV          63200000
 #define CUDAKERNEL_GPU_EV        63200001
 #define CUDACONFIGKERNEL_GPU_EV  63200002
